fix: update chart titles

--- a/binance.ipynb
+++ b/binance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "source": [
     "# Imports\r\n",
     "import pandas as pd\r\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "source": [
     "# Functions\r\n",
     "def epoch_to_datetime(epoch_date: int):\r\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "source": [
     "# Select ticker\r\n",
     "symbol = \"BTCUSDT\"\r\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "source": [
     "df_data = get_quotes(symbol, interval, number_of_days_to_track)\r\n",
     "df_data_oi = get_open_interest(symbol, interval)\r\n",
@@ -120,10 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "source": [
     "# Volume\r\n",
-    "fig = px.area(df_data, x=\"open time\", y=\"volume\", title=\"{} Binance Volume\".format(symbol), template = \"plotly_dark\")\r\n",
+    "fig = px.line(df_data, x=\"open time\", y=\"volume\", title=\"{} Binance Volume\".format(symbol), template = \"plotly_dark\")\r\n",
     "fig.show()"
    ],
    "outputs": [
@@ -139,16 +139,15 @@
          "hovertemplate": "open time=%{x}<br>volume=%{y}<extra></extra>",
          "legendgroup": "",
          "line": {
-          "color": "#636efa"
+          "color": "#636efa",
+          "dash": "solid"
          },
          "mode": "lines",
          "name": "",
          "orientation": "v",
          "showlegend": false,
-         "stackgroup": "1",
          "type": "scatter",
          "x": [
-          "2020-03-16 00:00:00",
           "2020-03-17 00:00:00",
           "2020-03-18 00:00:00",
           "2020-03-19 00:00:00",
@@ -647,11 +646,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "227276.92276000",
           "150089.92631800",
           "137127.63489400",
           "199020.87343900",
@@ -1150,7 +1149,8 @@
           "47852.92831300",
           "152452.51272400",
           "88397.26701500",
-          "35313.13833100"
+          "101344.52844100",
+          "18699.12728900"
          ],
          "yaxis": "y"
         }
@@ -2017,11 +2017,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "source": [
     "\r\n",
     "# Number of trades\r\n",
-    "fig = px.area(df_data, x=\"open time\", y=\"number of trades\", title=\"{} Binance Number of trades\".format(symbol), template = \"plotly_dark\")\r\n",
+    "fig = px.line(df_data, x=\"open time\", y=\"number of trades\", title=\"{} Binance Number of trades\".format(symbol), template = \"plotly_dark\")\r\n",
     "fig.show()"
    ],
    "outputs": [
@@ -2037,16 +2037,15 @@
          "hovertemplate": "open time=%{x}<br>number of trades=%{y}<extra></extra>",
          "legendgroup": "",
          "line": {
-          "color": "#636efa"
+          "color": "#636efa",
+          "dash": "solid"
          },
          "mode": "lines",
          "name": "",
          "orientation": "v",
          "showlegend": false,
-         "stackgroup": "1",
          "type": "scatter",
          "x": [
-          "2020-03-16 00:00:00",
           "2020-03-17 00:00:00",
           "2020-03-18 00:00:00",
           "2020-03-19 00:00:00",
@@ -2545,11 +2544,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          1608176,
           1069217,
           962843,
           1403608,
@@ -3048,7 +3047,8 @@
           1245775,
           3330102,
           1938478,
-          864540
+          2631048,
+          439775
          ],
          "yaxis": "y"
         }
@@ -3915,7 +3915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "source": [
     "# Price spreads\r\n",
     "fig = px.line(df_data, x=\"open time\", y=[\"low\",\"high\",\"close\"], title='{} Binance Spread High Low Close'.format(symbol), template = \"plotly_dark\")\r\n",
@@ -3943,7 +3943,6 @@
          "showlegend": true,
          "type": "scattergl",
          "x": [
-          "2020-03-16 00:00:00",
           "2020-03-17 00:00:00",
           "2020-03-18 00:00:00",
           "2020-03-19 00:00:00",
@@ -4442,11 +4441,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "4442.12000000",
           "4921.45000000",
           "5009.37000000",
           "5252.53000000",
@@ -4945,7 +4944,8 @@
           "33851.12000000",
           "35205.78000000",
           "36383.00000000",
-          "38904.11000000"
+          "38772.00000000",
+          "39200.00000000"
          ],
          "yaxis": "y"
         },
@@ -4961,7 +4961,6 @@
          "showlegend": true,
          "type": "scattergl",
          "x": [
-          "2020-03-16 00:00:00",
           "2020-03-17 00:00:00",
           "2020-03-18 00:00:00",
           "2020-03-19 00:00:00",
@@ -5460,11 +5459,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "5365.42000000",
           "5525.00000000",
           "5436.17000000",
           "6400.00000000",
@@ -5963,7 +5962,8 @@
           "35398.00000000",
           "40550.00000000",
           "39542.61000000",
-          "40350.00000000"
+          "40900.00000000",
+          "40278.48000000"
          ],
          "yaxis": "y"
         },
@@ -5979,7 +5979,6 @@
          "showlegend": true,
          "type": "scattergl",
          "x": [
-          "2020-03-16 00:00:00",
           "2020-03-17 00:00:00",
           "2020-03-18 00:00:00",
           "2020-03-19 00:00:00",
@@ -6478,11 +6477,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "5028.97000000",
           "5312.64000000",
           "5393.04000000",
           "6162.37000000",
@@ -6981,7 +6980,8 @@
           "35381.02000000",
           "37237.60000000",
           "39457.87000000",
-          "39522.77000000"
+          "40019.56000000",
+          "40136.85000000"
          ],
          "yaxis": "y"
         }
@@ -7851,7 +7851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "source": [
     "# Open Interest\r\n",
     "fig = px.line(df_data_oi , x=\"date\", y=\"OI\", title=\"{} Binance Open Interest\".format(symbol), template = \"plotly_dark\")\r\n",
@@ -7879,7 +7879,6 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -7908,11 +7907,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "55031.40800000",
           "56449.06100000",
           "55180.62700000",
           "56025.53000000",
@@ -7941,7 +7940,8 @@
           "68467.62700000",
           "72203.92700000",
           "53790.20600000",
-          "56059.95400000"
+          "56059.95400000",
+          "55321.82700000"
          ],
          "yaxis": "y"
         }
@@ -8808,7 +8808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "source": [
     "# Open Interest\r\n",
     "fig = px.line(df_data_oi , x=\"date\", y=\"OI in $\", title=\"{} Binance Open Interest in $ value\".format(symbol), template = \"plotly_dark\")\r\n",
@@ -8836,7 +8836,6 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -8865,11 +8864,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "1897440573.65584000",
           "2026888593.03453291",
           "1933055168.49407000",
           "1877279653.27965826",
@@ -8898,7 +8897,8 @@
           "2343646872.21000000",
           "2554520062.27548000",
           "2002386677.92716000",
-          "2211960709.98132359"
+          "2211960709.98132359",
+          "2213125347.53112000"
          ],
          "yaxis": "y"
         }
@@ -9765,7 +9765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "source": [
     "fig = px.line(df_top_accounts_long_short , x=\"date\", y=\"long/short ratio\", title=\"{} Binance Top Accounts Long/Short Ratio\".format(symbol), template = \"plotly_dark\")\r\n",
     "fig.show()"
@@ -9792,7 +9792,6 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -9821,11 +9820,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "1.1035",
           "1.1304",
           "1.0942",
           "1.1072",
@@ -9854,7 +9853,8 @@
           "1.0451",
           "1.0094",
           "1.0335",
-          "1.0077"
+          "1.0077",
+          "1.0297"
          ],
          "yaxis": "y"
         }
@@ -10749,7 +10749,6 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -10778,11 +10777,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "1.1786",
           "1.0773",
           "1.5183",
           "1.2635",
@@ -10811,7 +10810,8 @@
           "1.0851",
           "0.9433",
           "1.3202",
-          "1.3596"
+          "1.3596",
+          "0.9183"
          ],
          "yaxis": "y"
         }
@@ -11706,7 +11706,6 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -11735,11 +11734,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "1.0299",
           "0.9831",
           "0.9772",
           "1.0507",
@@ -11768,7 +11767,8 @@
           "1.0541",
           "1.0174",
           "1.0155",
-          "0.9650"
+          "0.9871",
+          "1.0331"
          ],
          "yaxis": "y"
         }
@@ -12635,7 +12635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "source": [
     "# Taker Buy / Sell Volume\r\n",
     "fig = px.area(df_taker_long_short_ratio, x=\"date\", y=[\"buy volume\",\"sell volume\"], title='{} Binance Taker Buy / Sell Volume'.format(symbol), template = \"plotly_dark\")\r\n",
@@ -12664,7 +12664,6 @@
          "stackgroup": "1",
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -12693,11 +12692,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "409013.4370",
           "356802.6790",
           "375106.7180",
           "340677.8150",
@@ -12726,7 +12725,8 @@
           "207376.5940",
           "586173.6540",
           "340143.3420",
-          "120627.9460"
+          "365704.7260",
+          "81535.4110"
          ],
          "yaxis": "y"
         },
@@ -12743,7 +12743,6 @@
          "stackgroup": "1",
          "type": "scatter",
          "x": [
-          "2021-06-29 01:00:00",
           "2021-06-30 01:00:00",
           "2021-07-01 01:00:00",
           "2021-07-02 01:00:00",
@@ -12772,11 +12771,11 @@
           "2021-07-25 01:00:00",
           "2021-07-26 01:00:00",
           "2021-07-27 01:00:00",
-          "2021-07-28 01:00:00"
+          "2021-07-28 01:00:00",
+          "2021-07-29 01:00:00"
          ],
          "xaxis": "x",
          "y": [
-          "397126.8920",
           "362940.3040",
           "383859.7750",
           "324245.3870",
@@ -12805,7 +12804,8 @@
           "196738.2500",
           "576124.0160",
           "334960.8150",
-          "125002.0400"
+          "370491.5080",
+          "78924.7420"
          ],
          "yaxis": "y"
         }
@@ -13643,7 +13643,7 @@
          }
         },
         "title": {
-         "text": "BTCUSDT Binance Spread High Low Close"
+         "text": "BTCUSDT Binance Taker Buy / Sell Volume"
         },
         "xaxis": {
          "anchor": "y",
